Tweak date display and handling
Differentiate between created and published date. Also update RSS to use
lastmod as RSS build date.

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -22,6 +22,9 @@ other = "Updated:"
 [created]
 other = "Created:"
 
+[published]
+other = "Published:"
+
 [search_placeholder]
 other = "Enter the terms you wish to search for."
 
